# capstone-llm

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  Dockerfile  README.md  answers.json  clean.py  docker-compose.yaml  main.py  pyproject.toml  questions.json  requirements.txt
capstone_llm/: Dockerfile  README.md  dev-requirements.in  requirements.txt  setup.py
capstone_llm/.conveyor/: project.yaml
capstone_llm/dags/: clean_job.py
capstone_llm/src/capstonellm/common/: catalog.py
capstone_llm/src/capstonellm/tasks/: clean.py  ingest.py  task1.py
dags/: clean_job.py  docker_example.py  solution_local.py
stackoverflow_etl/: Dockerfile  README.md  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.py
stackoverflow_etl/.conveyor/: project.yaml
stackoverflow_etl/dags/: stackoverflow_etl.py
stackoverflow_etl/src/stackoverflowetl/common/: catalog.py  spark.py
stackoverflow_etl/src/stackoverflowetl/tasks/: clean.py  ingest.py
